--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <div class="game">
-            <div id="dino"></div>
-            <div id="cactus"></div>
+            <img src="Images/noun-pixel-dino-3907595.png" alt="Pixelated black dino" id="dino">
+            <img src="Images/noun-cactus-102715.png" alt="Black cactus" id="cactus">          
         </div>
     </body>
     <script src="script.js"></script>
