--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" onclick="jump()">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +10,10 @@
     </head>
     <body>
         <div class="game">
-            <img src="Images/noun-pixel-dino-3907595.png" alt="Pixelated black dino" id="dino">
-            <img src="Images/noun-cactus-102715.png" alt="Black cactus" id="cactus">          
+            <div id="dino"></div>
+            <div id="cactus"></div>
         </div>
+
     </body>
     <script src="script.js"></script>
 </html>
